--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div id="root">
         <ul>
-            <li v-for=(item in mailRandom)>
-                Mail: {{mailRandom}}
+            <li v-for="item in mailRandom">
+                Mail: {{item}}
             </li>
         </ul>
     </div>
